2014/01/21 : add page lock
2014/01/21 : add postcard camera